--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+# Custom folders
+.[Aa]ssets/
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
