--- a/Pacman/Pacman.vcxproj
+++ b/Pacman/Pacman.vcxproj
@@ -121,6 +121,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\libs\Json\dist\jsoncpp.cpp" />
+    <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Avatar.cpp" />
     <ClCompile Include="BigDot.cpp" />
     <ClCompile Include="Cherry.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="..\libs\Json\inc\json\value.h" />
     <ClInclude Include="..\libs\Json\inc\json\version.h" />
     <ClInclude Include="..\libs\Json\inc\json\writer.h" />
+    <ClInclude Include="Animation.h" />
     <ClInclude Include="Avatar.h" />
     <ClInclude Include="BigDot.h" />
     <ClInclude Include="Cherry.h" />
