--- a/Pacman/Pacman.vcxproj
+++ b/Pacman/Pacman.vcxproj
@@ -122,15 +122,15 @@
   <ItemGroup>
     <ClCompile Include="..\libs\Json\dist\jsoncpp.cpp" />
     <ClCompile Include="Animation.cpp" />
-    <ClCompile Include="Avatar.cpp" />
-    <ClCompile Include="BigDot.cpp" />
-    <ClCompile Include="Cherry.cpp" />
-    <ClCompile Include="Dot.cpp" />
+    <ClCompile Include="oAvatar.cpp" />
+    <ClCompile Include="oBigDot.cpp" />
+    <ClCompile Include="oCherry.cpp" />
+    <ClCompile Include="oDot.cpp" />
     <ClCompile Include="Drawer.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameEntity.cpp" />
     <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="Ghost.cpp" />
+    <ClCompile Include="oGhost.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="Loader.cpp" />
     <ClCompile Include="main.cpp" />
@@ -159,16 +159,16 @@
     <ClInclude Include="..\libs\Json\inc\json\version.h" />
     <ClInclude Include="..\libs\Json\inc\json\writer.h" />
     <ClInclude Include="Animation.h" />
-    <ClInclude Include="Avatar.h" />
-    <ClInclude Include="BigDot.h" />
-    <ClInclude Include="Cherry.h" />
+    <ClInclude Include="oAvatar.h" />
+    <ClInclude Include="oBigDot.h" />
+    <ClInclude Include="oCherry.h" />
     <ClInclude Include="DataStructures.h" />
-    <ClInclude Include="Dot.h" />
+    <ClInclude Include="oDot.h" />
     <ClInclude Include="Drawer.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="GameObject.h" />
-    <ClInclude Include="Ghost.h" />
+    <ClInclude Include="oGhost.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="Loader.h" />
     <ClInclude Include="MovableGameEntity.h" />
