--- a/Pacman/Pacman.vcxproj
+++ b/Pacman/Pacman.vcxproj
@@ -122,6 +122,9 @@
   <ItemGroup>
     <ClCompile Include="..\libs\Json\dist\jsoncpp.cpp" />
     <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="BigDot.cpp" />
+    <ClCompile Include="Dot.cpp" />
+    <ClCompile Include="Ghost.cpp" />
     <ClCompile Include="oAvatar.cpp" />
     <ClCompile Include="oBigDot.cpp" />
     <ClCompile Include="oCherry.cpp" />
@@ -160,6 +163,9 @@
     <ClInclude Include="..\libs\Json\inc\json\version.h" />
     <ClInclude Include="..\libs\Json\inc\json\writer.h" />
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="BigDot.h" />
+    <ClInclude Include="Dot.h" />
+    <ClInclude Include="Ghost.h" />
     <ClInclude Include="oAvatar.h" />
     <ClInclude Include="oBigDot.h" />
     <ClInclude Include="oCherry.h" />
@@ -178,6 +184,7 @@
     <ClInclude Include="PathmapTile.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="StaticGameEntity.h" />
     <ClInclude Include="ResourceCache.h" />
@@ -190,6 +197,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\data\PacmanAtlasData.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Pacman.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
