--- a/Pacman/Pacman.vcxproj
+++ b/Pacman/Pacman.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="..\libs\Json\dist\jsoncpp.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="BigDot.cpp" />
+    <ClCompile Include="Collider.cpp" />
     <ClCompile Include="Dot.cpp" />
     <ClCompile Include="Ghost.cpp" />
     <ClCompile Include="oAvatar.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="..\libs\Json\inc\json\writer.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="BigDot.h" />
+    <ClInclude Include="Collider.h" />
     <ClInclude Include="Dot.h" />
     <ClInclude Include="Ghost.h" />
     <ClInclude Include="oAvatar.h" />
